[package]
name = "thunder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
config = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.66"
wither = "0.9.0"
futures = "0.3.25"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]
