[package]
name = "thunder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
once_cell = "1.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.66"
mongodb = "2.3.1"
