[package]
name = "thunder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
once_cell = "1.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.66"
mongodb = "2.3.1"
actix-jwt-authc = "0.2.0"
jsonwebtoken = "8.1.1"
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.20.0-alpha.1"
ring = "0.17.0-alpha.11"
time = "0.3.17"
tokio = "1.21.2"
futures = "0.3.25"
dashmap = "5.4.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
actix-multipart = "0.4.0"
futures-util = "0.3.25"
sanitize-filename = "0.4.0"
actix-files = "0.6.2"
mime = "0.3.16"
async-trait = "0.1.59"
clap = { version = "4.0.30", features = ["derive"] }
actix-cors = "0.6.4"
tar = "0.4.22"
bytes = "1.3.0"
libflate = "1.2.0"
zip = { version = "0.6.3", default-features = false }
async-recursion = "1.0.0"
